--- a/kiss.css
+++ b/kiss.css
@@ -164,6 +164,10 @@ a:hover {
   z-index: 10;
  }
 
+ button h3 {
+  display: none;
+ }
+
 
 /* 365partygirl (videos) */
 .theater {
@@ -171,7 +175,7 @@ a:hover {
   width: 100vw;
 
   display: grid;
-  grid-template: 1fr 1fr/ 30fr 70fr;
+  grid-template: 1fr / 30fr 70fr;
 
   overflow: hidden;
   animation: scroll 100s alternate-reverse infinite;
@@ -186,7 +190,7 @@ a:hover {
 }
 
 .theater h7 {
-  grid-area: 1 / 1 / -1 / 2;
+  grid-area: 1 / 1 / 2 / 2;
   justify-self: end;
 
   font-size: 0.6rem;
@@ -325,26 +329,51 @@ a:hover {
 /* MEDIA QUERIES */
 @media only screen and (max-width: 700px) {
 
-  .room img, .room h1, .room h2, .theater h1, .journal img, .journal h1, .journal div, .journal button, #click2, .video {
+  /* .room img, .room h1, .room h2, .theater h1, .journal img, .journal h1, .journal div, .journal button, #click2, .video {
     display: none;
   }
 
-  .room h3, .theater h3, .journal h3{
+  .room h3, .theater h3 {
     display: flex;
     font-size: 1.2rem;
-  }
+  } */
 
-  .splash img {
-    height: 60vh;
-    padding-left: 0vw;
+  .splash h1 {
+    display: none;
   }
 
   .theater h7 {
     display: none;
   }
 
+  /* PARTYGIRL MEDIA QUERIES */
+
+  /* JOURNAL MEDIA QUERIES */
+
   .journal {
-    background: url("pictures/loading/harp.png") center;
+    grid: 100vh / 30vw 70vw;
+  }
+
+  #field {
+  grid-area: 1 / 2 / -1 / 3;
+  font-size: 0.25rem;
+  padding: 0.25rem 0.1rem 1.5rem 0.2rem;
+}
+
+ #click2 {
+  display: none;
+ }
+
+#random {
+    grid-area: 1 / 1 / -1 / 2;
+    width: 20vw;
+    height: 10vh;
+
+    background: url(pictures/loading/harp.png) left;
+    box-shadow: -4px 5px 1px 1px rgba(15, 14, 14, 0.4);
+    
+    margin: 68vh 0vw 0vh 0.1vw;
+    color: transparent;
   }
 
 }
