--- a/kiss.css
+++ b/kiss.css
@@ -335,6 +335,7 @@ a:hover {
   
   .room {
   grid-template: 1fr 1fr 1fr / 1fr;
+  width: 100vw;
   }
 
   .all {
@@ -355,7 +356,7 @@ a:hover {
 }
 
 .scenes, .room, .people {
-  height: 100vh;
+  height: 85vh;
   width: 100%;
   transform: none;
 }
