--- a/kiss.css
+++ b/kiss.css
@@ -336,6 +336,7 @@ a:hover {
   .room {
   grid-template: 1fr 1fr 1fr / 1fr;
   width: 100vw;
+  overflow: hidden;
   }
 
   .all {
@@ -356,7 +357,7 @@ a:hover {
 }
 
 .scenes, .room, .people {
-  height: 85vh;
+  height: 90vh;
   width: 100%;
   transform: none;
 }
